--- a/course/.classpath
+++ b/course/.classpath
@@ -7,5 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/home/andrew/git/java_tasks/course/gson-2.8.5.jar"/>
+	<classpathentry kind="lib" path="/home/andrew/git/java_tasks/course/swingx-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
